# lol-viewer

./: .gitignore  BLANK_SCREEN_FIX.md  BUILD_CHECKLIST.md  BUILD_DISTRIBUTION.md  CHANGES.md  CMakeLists.txt  CODING_GUIDELINES.md  CONTRIBUTING.md  CREATE_RELEASE.md  DESIGN.md  DEV.md  ELECTRON_GUIDE.md  LoL-Viewer-win-x64.zip.partac  OPTIMIZATION_REVIEW.md  README.md  RELEASE_NOTES.md  SMARTSCREEN_WARNING.md  TODO.md  VERIFICATION_STATUS.md  autostart.py  biome.json  champion_data.py  champion_lane.csv  champions.json  check_build.py  claude.md  clean_build.py  combine-release.bat  combine-release.sh  constants.py  convert_icon.py  fetch_champions.py  index.html  lcu_detector.py  logger.py  lol-viewer-debug.spec  lol-viewer.iss  lol-viewer.spec  main.js  main.py  (+28 more)
.githooks/: commit-msg
.github/workflows/: nightly-build.yml  python-tests.yml  release.yml  (+3 more)
assets/: README.md  settings.html
config/: default.json
design/: build-detect.md  counter-detect.md  matchup-list.md  window-design.md
docs/: WINDOWS_TESTING_ON_LINUX.md  architecture.md  features.md
release/: README.md
scripts/: check_build.py  clean_build.py  fetch_champions.py  verify-windows-build.sh
src/: index.ts  main.cpp  mainwindow.cpp  mainwindow.h
tests/: quick_test_update.py  test_autocomplete.py  test_champion_data_basic.py  test_chromium_timing.py  test_completer_ui.py  test_lcu_detector.py  test_main.py  test_matchup_features.py  test_update_check.py  test_updater.py
widgets/: __init__.py  matchup_widgets.py  status_widget.py  viewer_list_item.py  viewer_widget.py  webview_utils.py
(+29 files in other folders)
